@@ -5,17 +5,18 @@ import com.github.andrew0030.pandora_core.platform.Services;
 import com.github.andrew0030.pandora_core.utils.LogicalSide;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class PandoraCoreClient {
     public static final TemplateShaderResourceLoader templateShaderLoader = new TemplateShaderResourceLoader();
 
     /* Early client init (mod construction) */
     public static void earlyInit() {
+        PaCoTesting.testInitClient();
+
         Services.RELOAD_LISTENER.registerResourceLoader((side) -> {
             if (side == LogicalSide.CLIENT) {
-                return Arrays.asList(
-                        templateShaderLoader
-                );
+                return List.of(templateShaderLoader);
             } else return null;
         });
     }
